# procedural_generation

./: .gitignore  LICENSE  README.md  setup.cfg
src/GenPro/genetic_algorithm/: algorithm.py  crossover.py  individual.py
src/GenPro/genetic_algorithm/crossovers/: crossover_multi_points.py  crossover_random.py  crossover_single_point.py  crossover_two_points.py
src/GenPro/genetic_algorithm/individuals/: basic.py
tests/GenPro/genetic_algorithm/: test_algorithm.py  test_crossover.py  test_individual.py
tests/GenPro/genetic_algorithm/crossovers/: test_crossover_random.py  test_crossover_single_point.py
tests/GenPro/genetic_algorithm/individuals/: test_basic.py
