[metadata]
name = GenPro
version = 0.0.1
author = Pablo Burgos
author_email = hispar@gmail.com
description = A package testing different procedural generation implementations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Hispar/GenPro
project_urls =
    Bug Tracker = https://github.com/Hispar/GenPro/issues
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.extras_require]
test = pytest; coverage

[options.packages.find]
where = src